# ocs2_robotic_assets

./: CMakeLists.txt  package.xml
include/ocs2_robotic_assets/: .gitignore  package_path.hpp.in
