<?xml version="1.0"?>
<package format="2">

  <name>ocs2_robotic_assets</name>
  <version>10.3.0</version>
  <description>This package contains all the URDF files need for the robotic examples.</description>
  
  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>ocs2_compiler_options</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
